:books: docs: Add Documentation for listOpening
